# ur5e_ws

./: .dockerignore  .gitignore  README.md
docker/: Dockerfile  compose.yml  entrypoint.sh
scripts/: compose.sh  gz_sim_entrypoint.sh  pkg_create.sh
src/movetest/: CMakeLists.txt  README.md  package.xml
src/movetest/src/: movetest.cpp
src/ur5e_moveit_config/: .setup_assistant  package.xml
src/ur5e_moveit_config/config/: ur5e.ros2_control.xacro  ur5e.srdf  ur5e.urdf.xacro
src/ur5e_sim/: README.md  package.xml  setup.cfg  setup.py
src/ur5e_sim/config/: visual_parameters.yaml
src/ur5e_sim/launch/: gz_sim.launch.py  rviz_sim.launch.py  ur5e.launch.py
src/ur5e_sim/scripts/: setup_models.sh
src/ur5e_sim/urdf/: ur.urdf.xacro  ur5e.urdf  ur_macro.xacro
src/ur5e_sim/urdf/inc/: ur_common.xacro
